fixed background issue on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-body {
-  background: rgb(251, 223, 216);
-}
-
 .carousel-caption {
   position: relative !important;
   top: 0 !important;
